[package]
name = "mint-nft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.5.1"
solana-program = "1.17.27"
spl-associated-token-account = { version="2.3.0", features = [ "no-entrypoint" ] }
spl-token = { version="4.0.1", features = [ "no-entrypoint" ] }

[lib]
crate-type = ["cdylib", "lib"]
